# cli-all-api

./: .dockerignore  .ignore  AGENTS.md  Dockerfile  Makefile  README.md  TEST_PLAN.md  WORK_SUMMARY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tailwind.config.js
.agent/rules/: 01-development-standards.md  02-quality-operations.md  05-advanced-modes.md  agents-architects.md  agents-ops.md
.agent/workflows/: code-searcher.md  codebase-research-analyst.md  memory-bank-synchronizer.md  planner-researcher.md  prompt-engineer.md  rust-pro.md  typescript-expert.md
.apm/: Implementation_Plan.md  metadata.json
.apm/Memory/: Memory_Root.md
.apm/guides/: Context_Synthesis_Guide.md  Memory_Log_Guide.md  Memory_System_Guide.md  Project_Breakdown_Guide.md  Project_Breakdown_Review_Guide.md  Task_Assignment_Guide.md
.apm/prompts/: Task_4_2_Dockerfile_Prompt.md  Task_4_3_DEB_Package_Prompt.md  Task_4_4_RPM_Package_Prompt.md  Task_5_1_Update_README_Prompt.md  Task_5_2_Man_Pages_Prompt.md  Task_5_3_Deployment_Guide_Prompt.md
.windsurf/rules/: 00-core-protocol.md  03-context-system.md  03b-local-memory.md  04-advanced-reasoning.md  06-odyssey-patterns.md  agents-code-quality.md  agents-data.md  agents-language.md  agents-misc.md  agents-planning.md
.windsurf/workflows/: code-explainer.md  code-refactor-master.md  database-specialist.md  debug-specialist.md  devops-engineer.md  docs-architect.md  frontend-designer.md  golang-pro.md  graphql-architect.md  handoff.md  problem-analyst.md  prompt-optimization.md  python-pro.md  security-auditor.md  tester.md  translate.md  unused-code-cleaner.md
config/: config.yaml
deployment/: README.md  WINDOWS.md  install-systemd.sh  install-windows.ps1  uninstall-windows.ps1
docs/: DEPLOYMENT.md  headless-analysis.md
docs/man/: proxypal-auth.1  proxypal-config.1  proxypal-serve.1  proxypal.1
packaging/rpm/: proxypal.spec
prompts/: headless-mode-integration.md
scripts/: build-deb.sh  build-linux.sh  build-rpm.sh  build-windows.sh
src/: App.tsx  index.tsx
src-headless/: Cargo.toml
src-headless/src/: lib.rs  main.rs
src-headless/src/auth/: credentials.rs  device_code.rs  import.rs  interactive.rs  mod.rs
src-headless/src/cli/: commands.rs  health.rs  mod.rs
src-headless/src/config/: loader.rs  mod.rs  types.rs
src-headless/src/proxy/: config_gen.rs  mod.rs  process.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  README_CN.md  config.example.yaml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AgentSetup.tsx  ApiEndpoint.tsx  CommandPalette.tsx  CopilotCard.tsx  EmptyState.tsx  HealthIndicator.tsx  OpenCodeKitBanner.tsx  ProviderCard.tsx  RequestMonitor.tsx  SavingsCard.tsx  SetupModal.tsx  SetupWizard.tsx  StatusIndicator.tsx  ThemeToggle.tsx  UsageSummary.tsx
src/lib/: tauri.ts
src/pages/: Analytics.tsx  ApiKeys.tsx  Dashboard.tsx  LogViewer.tsx  Settings.tsx  Welcome.tsx  index.ts
src/stores/: app.ts  theme.ts  (+1 more)
(+28 files in other folders)
